--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "tonysm/rich-text-laravel": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
