--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "symfony/html-sanitizer": "^7.1",
         "tonysm/rich-text-laravel": "^3.2"
     },
     "require-dev": {
@@ -23,7 +24,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/editor_helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
